<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <LinearLayout
        android:id="@+reports_id/patientIdLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+reports_id/patientIdEditText"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/patient_id_hint"
            android:inputType="text"
            android:tag="@string/patient_id" />

        <Button
            android:id="@+reports_id/scanBarcodeButton"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_barcode" />

        <Button
            android:id="@+reports_id/searchContactButton"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_patients" />

    </LinearLayout>

    <ScrollView
        android:id="@+reports_id/resultsScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--Report Detail-->
        <LinearLayout
            android:layout_margin="@dimen/tiny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--contact number-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:tag="@string/no_contact_rp"
                    android:text="@string/no_contact_rp"
                    android:textSize="@dimen/medium_txt" />

                <TextView
                    android:id="@+id/no_contact_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:tag="@string/no_contact_rp"
                    android:textSize="@dimen/large_txt" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <!--adult contact number -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:tag="@string/no_adult_contact_rp"
                    android:text="@string/no_adult_contact_rp"
                    android:textSize="@dimen/medium_txt" />

                <TextView
                    android:id="@+id/no_contact_adult_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:tag="@string/no_contact_rp"
                    android:textSize="@dimen/large_txt" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <!--childhood contact number-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:tag="@string/no_childhood_contact_rp"
                    android:text="@string/no_childhood_contact_rp"
                    android:textSize="@dimen/medium_txt" />

                <TextView
                    android:id="@+id/no_contact_childhood_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:tag="@string/no_contact_rp"
                    android:textSize="@dimen/large_txt" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <!--contacts screened-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:tag="@string/no_screened_contact_rp"
                    android:text="@string/no_screened_contact_rp"
                    android:textSize="@dimen/medium_txt" />

                <TextView
                    android:id="@+id/no_contact_screened_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:tag="@string/no_contact_rp"
                    android:textSize="@dimen/large_txt" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <!--contacts found symptomatic-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:weightSum="2"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:tag="@string/no_contact_found_symptomatic_rp"
                    android:text="@string/no_contact_found_symptomatic_rp"
                    android:textSize="@dimen/large_txt" />

                <TextView
                    android:id="@+id/no_contact_symptomatic_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:tag="@string/no_contact_rp"
                    android:textSize="@dimen/large_txt" />
            </LinearLayout>
            <!--contacts eligible -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:weightSum="2"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:tag="@string/no_contact_eligible_itp_rp"
                    android:text="@string/no_contact_eligible_itp_rp"
                    android:textSize="@dimen/large_txt" />

                <TextView
                    android:id="@+id/no_contact_eligible_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:tag="@string/no_contact_rp"
                    android:textSize="@dimen/large_txt" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
